--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,55 @@
-appdirs==1.4.4
-audioread==2.1.9
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
-cycler==0.10.0
-decorator==4.4.2
-idna==2.10
-joblib==1.0.1
-kiwisolver==1.3.1
-librosa==0.8.0
-llvmlite==0.36.0
-matplotlib==3.3.4
-numba==0.53.0
-numpy==1.20.1
-packaging==20.9
-Pillow==8.1.2
-pooch==1.3.0
-pycparser==2.20
-pyparsing==2.4.7
-python-dateutil==2.8.1
-requests==2.25.1
-resampy==0.2.2
-scikit-learn
-scipy
-six==1.15.0
-SoundFile==0.10.3.post1
-threadpoolctl==2.1.0
-torch==1.7.1
-torchaudio==0.7.2
-#torchvision==0.8.2
-typing-extensions==3.7.4.3
-urllib3==1.26.4
-wget==3.2
+--index-url https://pypi.tuna.tsinghua.edu.cn/simple
+
+anyio==3.6.2 ; python_full_version == "3.9.16"
+audioread==3.0.0 ; python_full_version == "3.9.16"
+certifi==2023.5.7 ; python_full_version == "3.9.16"
+cffi==1.15.1 ; python_full_version == "3.9.16"
+charset-normalizer==3.1.0 ; python_full_version == "3.9.16"
+click==8.1.3 ; python_full_version == "3.9.16"
+colorama==0.4.6 ; python_full_version == "3.9.16" and sys_platform == "win32" or python_full_version == "3.9.16" and platform_system == "Windows"
+decorator==5.1.1 ; python_full_version == "3.9.16"
+dnspython==2.3.0 ; python_full_version == "3.9.16"
+email-validator==2.0.0.post2 ; python_full_version == "3.9.16"
+fastapi[all]==0.95.1 ; python_full_version == "3.9.16"
+filelock==3.12.0 ; python_full_version == "3.9.16"
+h11==0.14.0 ; python_full_version == "3.9.16"
+httpcore==0.17.0 ; python_full_version == "3.9.16"
+httptools==0.5.0 ; python_full_version == "3.9.16"
+httpx==0.24.0 ; python_full_version == "3.9.16"
+idna==3.4 ; python_full_version == "3.9.16"
+itsdangerous==2.1.2 ; python_full_version == "3.9.16"
+jinja2==3.1.2 ; python_full_version == "3.9.16"
+joblib==1.2.0 ; python_full_version == "3.9.16"
+librosa==0.8.1 ; python_full_version == "3.9.16"
+llvmlite==0.40.0 ; python_full_version == "3.9.16"
+markupsafe==2.1.2 ; python_full_version == "3.9.16"
+mpmath==1.3.0 ; python_full_version == "3.9.16"
+networkx==3.1 ; python_full_version == "3.9.16"
+numba==0.57.0 ; python_full_version == "3.9.16"
+numpy==1.21.0 ; python_full_version == "3.9.16"
+orjson==3.8.12 ; python_full_version == "3.9.16"
+packaging==23.1 ; python_full_version == "3.9.16"
+platformdirs==3.5.0 ; python_full_version == "3.9.16"
+pooch==1.7.0 ; python_full_version == "3.9.16"
+pycparser==2.21 ; python_full_version == "3.9.16"
+pydantic==1.10.7 ; python_full_version == "3.9.16"
+python-dotenv==1.0.0 ; python_full_version == "3.9.16"
+python-multipart==0.0.6 ; python_full_version == "3.9.16"
+pyyaml==6.0 ; python_full_version == "3.9.16"
+requests==2.30.0 ; python_full_version == "3.9.16"
+resampy==0.4.2 ; python_full_version == "3.9.16"
+scikit-learn==1.2.2 ; python_full_version == "3.9.16"
+scipy==1.10.1 ; python_full_version == "3.9.16"
+sniffio==1.3.0 ; python_full_version == "3.9.16"
+soundfile==0.12.1 ; python_full_version == "3.9.16"
+starlette==0.26.1 ; python_full_version == "3.9.16"
+sympy==1.11.1 ; python_full_version == "3.9.16"
+threadpoolctl==3.1.0 ; python_full_version == "3.9.16"
+torch==2.0.0 ; python_full_version == "3.9.16"
+typing-extensions==4.5.0 ; python_full_version == "3.9.16"
+ujson==5.7.0 ; python_full_version == "3.9.16"
+urllib3==2.0.2 ; python_full_version == "3.9.16"
+uvicorn[standard]==0.22.0 ; python_full_version == "3.9.16"
+uvloop==0.17.0 ; sys_platform != "win32" and sys_platform != "cygwin" and platform_python_implementation != "PyPy" and python_full_version == "3.9.16"
+watchfiles==0.19.0 ; python_full_version == "3.9.16"
+websockets==11.0.3 ; python_full_version == "3.9.16"
