fix .gitignore: unignore libsndfile.so

--- a/.gitignore
+++ b/.gitignore
@@ -298,3 +298,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+!/libsndfile-binaries/*.so
+
